# stactools-ingest

./: .gitignore  README.md  cdk.json  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
infrastructure/: Dockerfile  app.py  config.py  handler.py
infrastructure/item_gen/: Dockerfile
infrastructure/item_load/: Dockerfile
src/stactools_uvx/: app.py
tests/: conftest.py  test_app.py
