[project]
name = "stactools-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["item-gen", "item-load", "boto3==1.34.145"]

[tool.uv.sources]
item-gen = { workspace = true }
item-load = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
deploy = [
    "aws-cdk-lib>=2.130.0",
    "eoapi-cdk==8.0.2",
    "pydantic-settings[yaml]>=2.8.1",
]
dev = [
    "aws-lambda-typing>=2.20.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-postgresql>=7.0.1",
]

[tool.pytest.ini_options]
addopts = "-vv --ignore=cdk.out --no-header --tb=native"
pythonpath = "."

[tool.ruff]

[tool.ruff.lint]
